# swiftui-skia

./: .gitignore  Cargo.toml  README.md  build-bridge.sh  build-rust.sh  build.rs
MySwiftPackage/: Package.swift
MySwiftPackage/RustXcframework.xcframework/: Info.plist
MySwiftPackage/RustXcframework.xcframework/ios-arm64/Headers/: module.modulemap
MySwiftPackage/RustXcframework.xcframework/ios-arm64_x86_64-simulator/Headers/: my-crab-lib.h
MySwiftPackage/Sources/MyCrabLib/: SwiftBridgeCore.swift  my-crab-lib.swift
SoftSkiaSwift/: Package.swift
SoftSkiaSwift/RustXcframework.xcframework/: Info.plist
SoftSkiaSwift/Sources/SoftSkiaSwift/: soft-skia-swift.swift
SwiftUISkia/: Package.swift
SwiftUISkia/Sources/SwiftUISkia/: Circle.swift  Image.swift  Line.swift  Points.swift  Rect.swift  RoundRect.swift  SwiftUISkia.swift  Text.swift  common.swift
SwiftUISkia/Tests/SwiftUISkiaTests/: SwiftUISkiaTests.swift
SwiftUISkiaBridge/: Package.swift
SwiftUISkiaBridge/RustXcframework.xcframework/: Info.plist
SwiftUISkiaBridge/Sources/SwiftUISkiaBridge/: swiftui-skia.swift
examples/first-example/first-example/: ContentView.swift  first_exampleApp.swift
examples/first-example/first-example.xcodeproj/: project.pbxproj
src/: lib.rs
swift-crab-test/swift-crab-test/: ContentView.swift  swift_crab_testApp.swift
swift-crab-test/swift-crab-test.xcodeproj/: project.pbxproj
swift-crab-test/swift-crab-testTests/: swift_crab_testTests.swift
swift-crab-test/swift-crab-testUITests/: swift_crab_testUITests.swift  swift_crab_testUITestsLaunchTests.swift
(+14 files in other folders)
