# Cargo.toml

[package]
name = "swiftui-skia"
version = "0.0.2-beta"
description = "The swiftui-skia is a skia based 2d graphics SwiftUI rendering library. It is based on Rust to implement software rasterization to perform rendering. It takes up less memory than the hardware rasterization, however it is still an experimental project. And it's based entirely on SwiftUI syntax."
edition = "2021"
authors = ["meloalright", "rustq"]
license = "MIT"

[lib]
crate-type = ["staticlib"]

[build-dependencies]
swift-bridge-build = "0.1"

[dependencies]
base64 = "0.22.1"
soft_skia = "0.10.0"
swift-bridge = "0.1"
cssparser = "0.29"